test/classes/initializers/parentCall/inCobeginOn.comm-none.good
inCobeginOn.chpl:4: In initializer:
inCobeginOn.chpl:8: error: use of super.init() call in a parallel statement
